# AnalysisSoftware

./: .cproject  .cvsignore  .gitignore  .gitmodules  .project  .pydevproject  .travis.yml  BristolAnalysisTools.doxyfile  BuildFile.xml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.md  FindROOT.cmake  Output.txt  PileUp2011_v2.root  README.md  bJetReso.root  index.html  initMachine.sh  params.json  pileup_160404-165970.root  pileup_160404-166502.root  pileup_160404-166861.root  pileup_160404-167151.root  startElectronAnalysis.sh  startOtherGenerators.sh  startTest.sh  start_2011_44X_Analysis.sh  start_2011_53X_Analysis.sh  start_2012_Analysis.sh
Debug/: makefile
Profile/: makefile  objects.mk
Release/: AnalysisTools  makefile  objects.mk  sources.mk
ci/: before_install.sh  install.sh  test.sh
condor/: README.md  condor.sh  job.description  job.description.template  job.sh  job_mapper  job_mapperc
data/: BTagEfficiency.root  EfficienciesAndSF_COMBINED.root  EfficienciesAndSF_ElectronTrigger_COMBINED.root  EfficienciesAndSF_Isolation_COMBINED.root  EfficienciesAndSF_Trigger_COMBINED.root  ElectronTriggerEfficiencies.root  LikelihoodInputAnalyserOutput.root  Muon_HLT_SF.root  Muon_IDIso_SF.root  PileUp_2012_65835_truth_finebin.root  PileUp_2012_69300_truth_finebin.root  PileUp_2012_72765_truth_finebin.root  PileUp_2012_72765_truth_finebin_RunsABC.root  PileUp_2015_truth_central.root  PileUp_2015_truth_down.root  PileUp_2015_truth_up.root  SF_HLT_Ele32_eta2p1.root  Tracking_EfficienciesAndSF_BCDEFGH.root  TriggerSF_Run2016BCDEF_v2.root  TriggerSF_Run2016GH_v2.root  egammaEffi.txt_EGM2D_id_etaBins.root  hadronLegEfficiencies_electron_.root  lightJetReso.root  ratios_hist.root
doc/: Tools.doc  Tools.doxyfile
eclipse/: .cproject.osx  .cproject.ubuntu  .project.osx  .project.ubuntu  .pydevproject.osx  Bristol_C++_CodeStyle.xml
interface/: BTagWeight.h  BTagWeight2011.h  ConfigFile.h  Constants.h  CrossSections.h  DataTypes.h  DetectorGeometry.h  Event.h  EventCounter.h  EventWeightProvider.h  EventWeights.h  GlobalVariables.h  HLTriggerAnalyser.h  HighLevelTriggers.h  Lumi3DReWeighting.h  LumiReWeighting.h  PoissonMeanShifter.h  Selection.h  TTbarMCEvent.h  TopPairEventCandidate.h  TopPairMCEvent.h  TtbarHypothesis.h  VBTF_ElectronID.h
python/: DataSetInfo.py  DataSetInfo_13TeV.py  DataSetInfo_13TeV_25ns.py  DataSetInfo_13TeV_50ns.py  DataSetInfo_7TeV.py  DataSetInfo_8TeV.py  DataSetInfo_PHYS14.py  DataSetInfo_V7.py  RunLikelihoodAnalysis.py  analysis_info.py  analysis_info_2016.py  combineLeptonSF.py  default_cfg.py  electronAnalysis_2012_DataOnly.py  electronAnalysis_DataOnly.py  electronAnalysis_DataOnly_newJEC.py  electronAnalysis_DataOnly_newJEC_ElectronPlus3JetsSkim.py  electronAnalysis_DataOnly_newJEC_LooseElectronSkim.py  electronAnalysis_cfg.py  electronAnalysis_specificMCOnly.py  get_DataPU_Profile.py  get_PU_profile.py  get_number_of_processed_events.py  leptonAnalysis_CommonMC.py  leptonAnalysis_CommonMCWithoutBigSamples.py  leptonAnalysis_TTbar.py  (+23 more)
(+622 files in other folders)
